# plotweaver-skillkit

./: .gitignore  LICENSE  README.en.md  README.md  pyproject.toml
.agents/skills/plot-style-reuse/: SKILL.md
.agents/skills/plot-style-reuse/agents/: openai.yaml
.agents/skills/plot-style-reuse/references/: downstream_integration.md  style_decision_rules.md  template_mapping.md
.agents/skills/plot-style-reuse/scripts/: generate_plot_example.py  select_template.py
.agents/skills/wechat-analysis/: SKILL.md
.agents/skills/wechat-analysis/agents/: openai.yaml
.agents/skills/wechat-analysis/references/: failure_modes.md  manual_review_protocol.md  output_contract.md  usage.md
.agents/skills/wechat-analysis/scripts/: preflight_check.py  run_analysis.py
docs/: manual_review.md  projectB_integration.md  usage.md
examples/: generate_demo.py
examples/demo_pack/: README.md  article_radar.json  master_style_index.json  reuse_playbook.md  style_profile_radar.json  template_registry.json  validation_manifest.json
style_kit/: __init__.py  palettes.json  style_decision_rules.md  theme.py
templates/: annotated_template.py  bar_template.py  distribution_template.py  heatmap_template.py  line_template.py  minimal_template.py  multi_panel_template.py  scatter_template.py
tests/: test_core.py  test_skill_workflows.py
wechat_plotkit/: __init__.py  cli.py  extract.py  fetch.py  indexing.py  input_loader.py  models.py  ocr.py  pipeline.py  utils.py  validate.py
